--- a/classroom/templates/classroom/students/take_test_form.html
+++ b/classroom/templates/classroom/students/take_test_form.html
@@ -7,8 +7,8 @@
             </div>
             <div class="col-6">
                 <div class="card">
-                    <div class="card-header">
-                         <h4>Question: {{ question.question }}</h4>
+                    <div class="card-header" style="background-color: #1ed88b">
+                         <h4 style="color: #FFFFFF">Question: {{ question.question }}</h4>
                     </div>
                     <div class="card-body">
 
