--- a/classroom/templates/classroom/teachers/score.html
+++ b/classroom/templates/classroom/teachers/score.html
@@ -30,7 +30,8 @@
 
         {% for answer,form in list %}
             <div class="card" style="margin-bottom: 20px; ">
-                <h3 class="card-title"><span style="background-color: #1dba79; color: #FFFFFF">&nbsp;Registration no: </span>
+                <h3 class="card-title"><span
+                        style="background-color: #1dba79; color: #FFFFFF">&nbsp;Registration no: </span>
                     &nbsp {{ answer.student.reg_no }}</h3>
                 <div class="card-body">
                     <form action="" method="post">
@@ -52,7 +53,13 @@
                                     {% endif %}
                                 </p>
 
-                                <p><span class="right-title-text">Final Score:</span> &nbsp{{ answer.final_score }}</p>
+                                <p><span class="right-title-text">Final Score:</span> &nbsp
+                                    {% if answer.final_score != -1 %}
+                                        {{ answer.final_score }}
+
+                                    {% else %}
+                                        --
+                                    {% endif %}</p>
 
 
                                 <p hidden>{{ form.answer_id }}</p>
